Avoid crash when trying to drag a piece for the first time.

BUG: 283952